[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rand = "0.8.5"
uniffi = { version = "0.24.3", features = ["build"] }

[build-dependencies]
uniffi_build = "0.24.3"
uniffi_bindgen = "0.24.3"
